change flash messages position to right below the navbar. Fixes layout issue in homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,10 +14,13 @@
  *= require_self
  */
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Lato|Ubuntu');
 
 //ALL pages
+
 body, html {
     height: 100%;
+    font-family: 'Lato', sans-serif;
 }
 
 .container {
